; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_draw-rasterize.c_fz_convert_rasterizer.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_draw-rasterize.c_fz_convert_rasterizer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 (i32*, %struct.TYPE_8__*, i32, i32*, i32*, i8*, i32*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fz_convert_rasterizer(i32* %0, %struct.TYPE_8__* %1, i32 %2, i32* %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_8__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %16 = call i32 @fz_bound_rasterizer(i32* %14, %struct.TYPE_8__* %15)
  store i32 %16, i32* %13, align 4
  %17 = load i32, i32* %13, align 4
  %18 = load i32*, i32** %10, align 8
  %19 = call i32 @fz_pixmap_bbox_no_ctx(i32* %18)
  %20 = call i32 @fz_intersect_irect(i32 %17, i32 %19)
  store i32 %20, i32* %13, align 4
  %21 = load i32, i32* %13, align 4
  %22 = load i32*, i32** %7, align 8
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %24 = call i32 @fz_clip_rasterizer(i32* %22, %struct.TYPE_8__* %23)
  %25 = call i32 @fz_intersect_irect(i32 %21, i32 %24)
  store i32 %25, i32* %13, align 4
  %26 = load i32, i32* %13, align 4
  %27 = call i32 @fz_is_empty_irect(i32 %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %41, label %29

29:                                               ; preds = %6
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %31, i32 0, i32 0
  %33 = load i32 (i32*, %struct.TYPE_8__*, i32, i32*, i32*, i8*, i32*)*, i32 (i32*, %struct.TYPE_8__*, i32, i32*, i32*, i8*, i32*)** %32, align 8
  %34 = load i32*, i32** %7, align 8
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %36 = load i32, i32* %9, align 4
  %37 = load i32*, i32** %10, align 8
  %38 = load i8*, i8** %11, align 8
  %39 = load i32*, i32** %12, align 8
  %40 = call i32 %33(i32* %34, %struct.TYPE_8__* %35, i32 %36, i32* %13, i32* %37, i8* %38, i32* %39)
  br label %41

41:                                               ; preds = %29, %6
  ret void
}

declare dso_local i32 @fz_bound_rasterizer(i32*, %struct.TYPE_8__*) #1

declare dso_local i32 @fz_intersect_irect(i32, i32) #1

declare dso_local i32 @fz_pixmap_bbox_no_ctx(i32*) #1

declare dso_local i32 @fz_clip_rasterizer(i32*, %struct.TYPE_8__*) #1

declare dso_local i32 @fz_is_empty_irect(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
